--- a/search_list/templates/my_app/new_search.html
+++ b/search_list/templates/my_app/new_search.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+    <form action="{% url 'new_search' %}" method="post">
+    {% csrf_token %}
+        <input type="text" name="search" placeholder="Search" class="validate">
+         <button class="btn waves-effect waves-light" type="submit" name="action">
+             Submit
+             <i class="material-icons right">send</i>
+         </button>
+    </form>
+    <div class="center">
+        <h2> {{  search | title }}</h2>
+    </div>
+
+    <div class="row">
+{#    {% for posting in final_postings %}#}
+        <div class="col s4">
+            <div class="card">
+
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
