--- a/search_list/templates/base.html
+++ b/search_list/templates/base.html
@@ -47,7 +47,14 @@
             </div>
         </div>
     </div>
-
+    <form action="{% url 'new_search' %}" method="post">
+    {% csrf_token %}
+        <input type="text" name="search" placeholder="Search" class="validate">
+         <button class="btn waves-effect waves-light" type="submit" name="action">
+             Submit
+             <i class="material-icons right">send</i>
+         </button>
+    </form>
 {% block content %}
 
 {% endblock content %}
